refactor(sessions): switch from postgres to sqlite for session storage
- Update Dockerfile to enable CGO and add required dependencies
- Remove unused session-related models and database tables
- Update session storage configuration in main.go
- Update documentation to reflect the change
- Clean up unused dependencies in go.mod and go.sum

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,6 @@ services:
       API_ENDPOINT: "api:50051"
       COOKIE_SECRET_KEY: "5TIyDD81Laz/xdxEw2yJVPKdJYyPqxmyONaSVJHs6jY="
       JWT_SECRET: "NOz2sZGgFo52Np3AZ4XJAkY9FH5GP7Yzye1ZSnNYRqc="
-      DATABASE_URL: "postgres://meower:meower@db:5432/meower?sslmode=disable"
     ports:
       - "3000:3000"
       - "7331:7331"
@@ -40,11 +39,11 @@ services:
       - ./web/:/src/web/
       - ./api/:/src/api/
       - go_modules:/go/pkg/mod/
+      - web_sessions:/src/web/data/
     depends_on:
       - api
       - tailwind
       - development-web
-      - db
     command: 'templ generate -v --watch --proxy="http://localhost:3000" --proxybind="0.0.0.0" --open-browser=false --cmd="go run main.go"'
 
   tailwind:
@@ -174,3 +173,4 @@ services:
 volumes:
   go_modules:
   node_modules:
+  web_sessions:
