feat(logging): add structured logging system with debug level support
Implement a comprehensive logging system using charmbracelet/log package. The system includes:
- Log level configuration via environment variable (LOG_LEVEL)
- Contextual logging with fields for user, character and chunk operations
- Performance timing for critical operations
- Debug logging throughout services for better observability

Add debug logging to character movement, chunk generation, user authentication and server startup. Configure LOG_LEVEL=debug in docker-compose.yml to enable detailed logging.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,7 @@ services:
     tty: true
     restart: unless-stopped
     environment:
+      LOG_LEVEL: "debug"
       DATABASE_URL: "postgres://meower:meower@db:5432/meower?sslmode=disable"
       JWT_SECRET: "NOz2sZGgFo52Np3AZ4XJAkY9FH5GP7Yzye1ZSnNYRqc="
     ports:
