feat(resources): implement resource spawning system with terrain-specific nodes
Add database tables for resource types and nodes
Integrate resource generation with chunk system using noise algorithms
Create protobuf definitions and gRPC service for resource operations
Add documentation for system design and integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -148,7 +148,7 @@ services:
       timeout: 10s
       retries: 10
     volumes:
-      - ./api/db/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - ./api/db/migrations/schema.sql:/docker-entrypoint-initdb.d/schema.sql
 
   pgweb:
     image: sosedoff/pgweb
